# system-backend

./: .gitignore  AUTHORS  README.md  alembic.ini  builtin_rules.py  config.py.example  frontend_dev.py  grafana.py  local_rules.example.py  main.py  mq.py  pyproject.toml  readme.md  requirements.txt  rules.py  shared.py  timer.py
docs/: development.md  install.md  mqtt_structure.md  rules.md
examples/: home-control-housekeeping.service  home-control-housekeeping.timer  home-control.service  nginx-home-control-snippet.conf  stunnel.conf
migrations/: env.py
migrations/versions/: 09666637ea0f_.py  0a5dd039ddc0_.py  0fbb63d18415_timers_add_enabled_field.py  1b9b2f51e5c8_move_vnode_id_to_separate_column.py  42eae3f77164_track_last_seen_in_db.py  6494eb528fb5_.py  661f15cfb036_add_rule_state_table.py  68740fb25fbd_add_auto_delete_column_for_timers.py  694dbe6eda54_add_trends_table_to_reduce_number_of_.py  816b477c7611_add_new_fields_to_deviceinfo_table.py  9f899f1fe66e_add_user_table.py  ae26b8af43be_convert_columns_to_timestamp_with_timezone.py  b428fcb361e2_rename_lastseen_to_deviceinfo.py  b61f281339df_move_last_seen_back_into_thing.py  c6eafb0dad45_split_thing_status_into_separate_types.py  d27acdb53cfa_.py  d2ecf6eba905_.py  d5604118823b_.py  d64d247238a7_initial.py  dd00c26615e7_re_add_last_seen.py  ef73879a2c3b_add_index_to_state_table.py  f913db1fc4d4_.py
models/: database.py  things.py
