[project]
name = "home-control"
dynamic = ["version"]
description = "A no-cloud Internet of Things solution"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt==2.1.*",
    "psycopg2==2.9.*",
    "SQLAlchemy==2.0.*",
    "websockets==15.0.*",
    "alembic==1.15.*",
    "python-dateutil==2.9.*",
    "click==8.1.*",
    "itsdangerous==2.2.*",
    "bcrypt==4.3.*",
    "croniter==6.0.*",
]

[build-system]
requires = [
    "hatchling==1.27.*",
    "hatch-vcs==0.4.*",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[project.scripts]
home-control = "main:cli"
